--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -19,3 +19,37 @@ jobs:
     - run: gofmt -w -s .
     - run: ./scripts/fail_on_diff.sh
     - run: go build ./examples/dump
+
+  dsq-tests-ubuntu:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@master
+      with:
+        ref: ${{ github.ref }}
+
+    - run: go build
+    - run: ./scripts/test.sh
+
+  dsq-tests-windows:
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@master
+      with:
+        ref: ${{ github.ref }}
+
+    - run: go build
+    - run: ./scripts/test.sh
+      shell: bash
+
+  dsq-tests-macos:
+    runs-on: macos-latest
+
+    steps:
+    - uses: actions/checkout@master
+      with:
+        ref: ${{ github.ref }}
+
+    - run: go build
+    - run: ./scripts/test.sh
