--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@master
       with:
         ref: ${{ github.ref }}
+
+    - run: ./scripts/ci/prepare_linux.sh
     - run: go test -race -cover
     - run: gofmt -w -s .
     - run: ./scripts/fail_on_diff.sh
