--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -19,13 +19,12 @@ jobs:
         echo "RELEASE_ID=`curl -H 'Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' https://api.github.com/repos/multiprocessio/dsq/releases/tags/$GIT_TAG | jq '.id'`" >> $GITHUB_ENV
     - run: go build -ldflags "-X main.Version=$GIT_TAG"
     - run: zip dsq-linux-x64-$GIT_TAG.zip dsq
-    - run: ls
     - name: Upload on release
       run: |
         curl --fail \
           -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "Content-Type: application/zip" \
-          --data-binary @./releases/dsq-linux-x64-$GIT_TAG.zip \
+          --data-binary @./dsq-linux-x64-$GIT_TAG.zip \
           "https://uploads.github.com/repos/multiprocessio/dsq/releases/$RELEASE_ID/assets?name=dsq-linux-x64-$GIT_TAG.zip"
 
   build-macos:
@@ -47,7 +46,7 @@ jobs:
         curl --fail \
           -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "Content-Type: application/zip" \
-          --data-binary @./releases/dsq-darwin-x64-$GIT_TAG.zip \
+          --data-binary @./dsq-darwin-x64-$GIT_TAG.zip \
           "https://uploads.github.com/repos/multiprocessio/dsq/releases/$RELEASE_ID/assets?name=dsq-darwin-x64-$GIT_TAG.zip"
 
   build-windows:
@@ -66,4 +65,4 @@ jobs:
     - run: zip dsq-win32-x64-$Env:GIT_TAG.zip dsq
     - name: Upload release
       run: |
-        curl --fail -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" -H "Content-Type: application/zip" --data-binary "@./releases/dsq-win32-x64-$Env:GIT_TAG.zip" "https://uploads.github.com/repos/multiprocessio/dsq/releases/$Env:RELEASE_ID/assets?name=dsq-win32-x64-$Env:GIT_TAG.zip"
+        curl --fail -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" -H "Content-Type: application/zip" --data-binary "@./dsq-win32-x64-$Env:GIT_TAG.zip" "https://uploads.github.com/repos/multiprocessio/dsq/releases/$Env:RELEASE_ID/assets?name=dsq-win32-x64-$Env:GIT_TAG.zip"
