Upgrade DataStation library and add notes about powershell/cmd (#23)
* Update for PowerShell and upgrade datastation

* Also cmd.exe

* Add tests on powershell/cmd

* Fix for build

* Fully cleanup all files after run

* Fixes for tests

* Fixes for fromat

* Add python test

* Update workflow

* Update for windows .exe

* Not just bash but all windows

* Closer

* Fixes for linux

* More debugging

* Try using native

* Different attempt

* debug

* Another another approach

* No bash check

* Don't need to escape inside python

* Fixes for pipes

* Add piping note about windows

* Add more notes about install

--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -29,7 +29,7 @@ jobs:
 
     - run: ./scripts/ci/prepare_linux.sh
     - run: go build
-    - run: ./scripts/test.sh
+    - run: ./scripts/test.py
 
   dsq-tests-windows:
     runs-on: windows-latest
@@ -42,8 +42,14 @@ jobs:
     - run: ./scripts/ci/prepare_windows.ps1
       shell: pwsh
     - run: go build
-    - run: ./scripts/test.sh
+    - run: ./scripts/test.py
       shell: bash
+
+    # Subtle behavioral differences between powershell/cmd and bash. For example nested double quotes must be escaped.
+    - run: python3 ./scripts/test.py
+      shell: powershell
+    - run: python3 ./scripts/test.py
+      shell: cmd
 
   dsq-tests-macos:
     runs-on: macos-latest
@@ -55,4 +61,4 @@ jobs:
 
     - run: ./scripts/ci/prepare_macos.sh
     - run: go build
-    - run: ./scripts/test.sh
+    - run: ./scripts/test.py
