--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -43,7 +43,11 @@ jobs:
         shell: pwsh
       - run: go build -trimpath -buildmode=pie -mod=readonly -modcacherw
       # if you call os.TempDir() that path would be \blabla\Runner~1\blabla the ~ will break some apps.
-      - run: echo "TEMP=$env:USERPROFILE\AppData\Local\Temp" >> $env:GITHUB_ENV
+      - name: Override temp directory
+        run: |
+          set TMP=%USERPROFILE%\AppData\Local\Temp
+          set TEMP=%USERPROFILE%\AppData\Local\Temp
+        shell: cmd
       - run: ./scripts/test.py
         shell: bash
 
