--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -29,7 +29,10 @@ jobs:
 
       - run: ./scripts/ci/prepare_linux.sh
       - run: go build -trimpath -buildmode=pie -mod=readonly -modcacherw
-      - run: ./scripts/test.py
+      - name: Test defaults
+        run: ./scripts/test.py
+      - name: Test without SQLite writer
+        run: DSQ_NO_SQLITE_WRITER=true ./scripts/test.py
 
   dsq-tests-windows:
     runs-on: windows-latest
