--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -29,7 +29,10 @@ jobs:
 
       - run: ./scripts/ci/prepare_linux.sh
       - run: go build -trimpath -buildmode=pie -mod=readonly -modcacherw
-      - run: ./scripts/test.py
+      - name: Test defaults
+        run: ./scripts/test.py
+      - name: Test without SQLite writer
+        run: DSQ_NO_SQLITE_WRITER=true ./scripts/test.py
 
   dsq-tests-windows:
     runs-on: windows-latest
@@ -46,9 +49,11 @@ jobs:
         shell: bash
 
       # Subtle behavioral differences between powershell/cmd and bash. For example nested double quotes must be escaped.
-      - run: python3 ./scripts/test.py
+      - name: Test with powershell
+        run: python3 ./scripts/test.py
         shell: powershell
-      - run: python3 ./scripts/test.py
+      - name: Test with cmd.exe
+        run: python3 ./scripts/test.py
         shell: cmd
 
   dsq-tests-macos:
