--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          args: --timeout=10000
+          args: --timeout=30s
       - run: go test -race -cover
       - run: gofmt -w -s .
       - run: ./scripts/fail_on_diff.sh
