--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -15,6 +15,10 @@ jobs:
           ref: ${{ github.ref }}
 
       - run: ./scripts/ci/prepare_linux.sh
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          args: --timeout=3m --verbose
       - run: go test -race -cover
       - run: gofmt -w -s .
       - run: ./scripts/fail_on_diff.sh
